fix debug in docker